syntax = "proto3";
package db;
option go_package = "azmopb";

service DB {
	//rpc Decrement(DecrementRequest) returns (Event);
	//rpc Increment(IncrementRequest) returns (Event);
	rpc Put(PutRequest) returns (Event);
	rpc Delete(DeleteRequest) returns (Event);
	
	rpc Batch(BatchRequest) returns (stream Event);

	rpc Range(RangeRequest) returns (stream Event);
	rpc Get(GetRequest) returns (Event);
	rpc Watch(WatchRequest) returns (stream Event);
}

message BatchRequest {
	repeated Argument arguments = 1;
}

message Argument {
	oneof Command {
		//DecrementRequest decrement = 1;
		//IncrementRequest increment = 2;
		PutRequest put = 3;
		DeleteRequest delete = 4;
	}
}

/*
message DecrementRequest {
	bytes key = 1;
	int64 value = 2;
	bool tombstone = 3;
}

message IncrementRequest {
	bytes key = 1;
	int64 value = 2;
	bool tombstone = 3;
}
*/

message PutRequest {
	bytes key = 1;
	bytes value = 2;
	bool tombstone = 3;
}

message DeleteRequest {
	bytes key = 1;
}

message GetRequest {
	bytes key = 1;
	int64 revision = 2;
	bool must_equal = 3;
}

message RangeRequest {
	bytes from = 1;
	bytes to = 2;
	int64 revision = 3;
	int32 limit = 4;
}

message WatchRequest {
	bytes key = 1;
}

message Event {
	enum Type {
		DECREMENT = 0;
		INCREMENT = 1;
		PUT = 2;
		DELETE = 3;
		GET = 4;
		RANGE = 5;
		WATCH = 6;
	}

	Type type = 1;
	bytes content = 2;
	int64 numeric = 3;
	bytes key = 4;
	int64 created = 5;
	int64 current = 6;
}
